# drf-swagger

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py  viewsets.py
api/migrations/: 0001_initial.py  0002_worklist.py
drf_swagger/: asgi.py  custom_hooks.py  openapi.py  settings.py  urls.py  wsgi.py
findings/2-doc/: README.md  schema.spectacular.yaml  schema.yasg.yaml
hurl/: get.hurl  post.hurl  schema-yasg.hurl  spectacular-schema.hurl
