[tool.poetry]
name = "drf-swagger"
version = "0.1.0"
description = "test of swagger + drf-spectacula"
authors = ["Ken Shih <ken.shih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.16"
djangorestframework = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
