[tool.poetry]
name = "drf-swagger"
version = "0.1.0"
description = "test of swagger + drf-spectacula"
authors = ["Ken Shih <ken.shih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.14"
djangorestframework = "3.14.0"
drf-spectacular = "^0.27.2"
drf-yasg = "^1.20.0"
setuptools = "^75.2.0"
django-extensions = "3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
